[package]
name = "nano-mesh-telemetry"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Gatlin Newhouse"]
description = "A embedded-nano-mesh telemetry type library for sensors, nodes, and serial interfaces"
keywords = ["no_std", "embedded"]
readme = "./README.md"
categories = ["no_std", "embedded"]
repository = "https://github.com/coffee-and-telesense/nano-mesh-telemetry"

[dependencies]
embedded-nano-mesh = "2.1"

[lints.rust]
ambiguous_negative_literals = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let_underscore_drop = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
missing_copy_implementations = "warn"
nonstandard-style = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
refining-impl-trait = "warn"
rust-2024-compatibility = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unknown-or-malformed-diagnostic-attributes = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused = "warn"
unused_lifetimes = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# These lints are from the `restriction` lint group and prevent specific
# constructs being used in source code in order to drive up consistency,
# quality, and brevity
absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
doc_markdown = "allow"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
enum_variant_names = "warn"
expect_used = "warn"
filetype_is_file = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_enum_variant = "warn"
large_futures = "warn"
large_types_passed_by_value = "warn"
map_err_ignore = "warn"
manual_let_else = "warn"
module_name_repetitions = "warn"
needless_pass_by_value = "warn"
panic = "warn"
pathbuf_init_then_push = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_outside_block = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unused_async = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_used = "warn"
verbose_file_reads = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"

# clippy nursery lints (lints which are buggy or need more work)
as_ptr_cast_mut = "warn"
branches_sharing_code = "warn"
clear_with_drain = "warn"
coerce_container_to_any = "warn"
collection_is_never_read = "warn"
debug_assert_with_mut_call = "deny"
equatable_if_let = "warn"
fallible_impl_from = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
large_stack_frames = "warn"
missing_const_for_fn = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
path_buf_push_overwrite = "warn"
while_float = "warn"
